--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+#C++
+
 # Prerequisites
 *.d
 
@@ -30,3 +32,32 @@
 *.exe
 *.out
 *.app
+
+#KiCAD
+
+# Temporary files
+*.000
+*.bak
+*.bck
+*.kicad_pcb-bak
+*.kicad_sch-bak
+*-backups
+*.kicad_prl
+*.sch-bak
+*~
+_autosave-*
+*.tmp
+*-save.pro
+*-save.kicad_pcb
+fp-info-cache
+
+# Netlist files (exported from Eeschema)
+*.net
+
+# Autorouter files (exported from Pcbnew)
+*.dsn
+*.ses
+
+# Exported BOM files
+*.xml
+*.csv
